# proc-singleton

./: Cargo.toml  README.md
src/: lib.rs
