[package]
name = "proc-singleton"
version = "0.2.0"
edition = "2024"
authors = ["johnteper <git@johnteper.me>"]
description = "Rust proc-macros for implement Singleton Pattern"
homepage = "https://github.com/jonhteper/proc-singleton"
license = "MIT"
repository = "https://github.com/jonhteper/proc-singleton"
keywords = ["macro", "procedural", "singleton"]

[lib]
name = "proc_singleton"
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }

[dev-dependencies]
uuid = { version = "1.11.0", features = ["v4"] }


[features]
arc = []
